created mainLayout with content

--- a/blogii/blog/client/shared/layouts/mainLayout.html
+++ b/blogii/blog/client/shared/layouts/mainLayout.html
@@ -1,7 +1,5 @@
-<head>
-  <title>Tutorial blog</title>
-</head>
-<body>
+<template name="mainLayout">
+
   <nav class="navbar navbar-default">
     <div class="container">
       <div class="navbar-header">
@@ -25,4 +23,5 @@
       <div class="col-lg-2"></div>
     </div>
   </div>
-</body>
+
+</template>
